# strtox

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  double.cpp  float.cpp
strtox/: regex.cpp  regex.h  stringview.h  strtox.cpp  strtox.h  x3_utils.h  xsd.cpp  xsd.h
tests/: CMakeLists.txt  main.cpp  strtof.cpp
